--- a/package.json
+++ b/package.json
@@ -2,17 +2,15 @@
   "name": "isc-backend-server",
   "version": "1.0.0",
   "description": "Serveur backend pour la plateforme vidéo ISC.",
-  "main": "backend_server.js",
   "type": "module",
+  "main": "backend_server.js",
   "scripts": {
-    "start": "node backend_server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node backend_server.js"
   },
-  "author": "Votre Nom",
-  "license": "ISC",
   "dependencies": {
+    "express": "^4.19.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "axios": "^1.7.2"
   }
 }
 
