--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5",
-    "axios": "^1.7.2"
+    "axios": "^1.7.2",
+    "pg": "^8.12.0"
   }
 }
